testsuite/tests/typecheck/should_fail/ExplicitSpecificity5.stderr

ExplicitSpecificity5.hs:7:1: error: [GHC-54832]
    Inferred type variables are not allowed
    In an instance declaration
